# nautilus_trader

./: .envrc  .gitignore  .pre-commit-config.yaml  1.24.3  Makefile  RELEASES.md  act.ps1  benchmark.py  build.py  ema_cross_test.py  floats.csv  install  install.ps1  nautilus_trader_develop.code-workspace  pyproject.toml  replicate_error.py  setup.py  test copy.py  test.py  test_changes.py  test_ema.py
.circleci/: config.yml
.github/workflows/: build.yml
docs/concepts/: strategies.md
docs/integrations/: index.md
nautilus_core/: Cargo.toml
nautilus_core/model/: cbindgen.toml  cbindgen_cython.toml
nautilus_core/persistence/: Cargo.toml
nautilus_core/persistence_g/: Cargo.toml  _Cargo.toml  build.rs  cbindgen.toml  cbindgen_cython.toml  lib.rs
nautilus_core/persistence_g/src/: lib.rs  mod.rs  reader.rs
nautilus_core/persistence_g/src/Z/: reader copy.rs  reader_z.rs
nautilus_core/persistence_g/src/readers/: reader.rs
nautilus_core/pyo3/: Cargo.toml
nautilus_trader/: __init__.py
nautilus_trader/accounting/: calculators.pyx  manager.pxd  manager.pyx
nautilus_trader/analysis/: analyzer.py  performance.py  statistic.py
nautilus_trader/backtest/: config.py  engine.pxd  engine.pyx  exchange.pxd  exchange.pyx  execution_client.pxd  matching_engine.pxd  matching_engine.pyx  modules.pxd  modules.pyx  node.py  results.py
nautilus_trader/cache/: cache.pxd  cache.pyx  facade.pxd  facade.pyx
nautilus_trader/common/: actor.pxd  actor.pyx  component.pxd  component.pyx
nautilus_trader/config/: __init__.py  backtest.py  common.py
tests/: __init__.py
(+150 files in other folders)
